--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -1879,6 +1879,7 @@
     }
    ],
    "source": [
+    "#Cloumns in the Dataset\n",
     "data.columns.values"
    ]
   },
@@ -1927,7 +1928,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -2087,7 +2088,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2243,7 +2246,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2399,7 +2404,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2562,7 +2569,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2711,6 +2720,7 @@
     }
    ],
    "source": [
+    "#Determining the Null Values in the dataset\n",
     "round(100*data.isnull().sum()/len(data.index),2).sort_values(ascending=False)"
    ]
   },
@@ -2789,6 +2799,7 @@
     }
    ],
    "source": [
+    "# Determining the Null Values post dropping\n",
     "round(100*(data.isnull().sum()/len(data.index)),2).sort_values(ascending=False)"
    ]
   },
@@ -3164,8 +3175,8 @@
      "text": [
       "Country with the most attack:  Iraq\n",
       "City with most attack:  Baghdad\n",
-      "Country with the min attack:  International\n",
-      "City with least attack:  Reasi district\n",
+      "Country with the min attack:  St. Kitts and Nevis\n",
+      "City with least attack:  Baila\n",
       "Region with most attack: Middle East & North Africa\n",
       "Region with least attack: Australasia & Oceania\n",
       "Year with most attack:  2014\n",
@@ -3513,41 +3524,6 @@
     "data['Weapon_type'].value_counts().plot(kind='pie',figsize=(9,9),autopct='%.2f%%')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
